--- a/config.example.json
+++ b/config.example.json
@@ -2,7 +2,7 @@
     "token":"insertBotToken",
     
     "host":"localhost",
-    "user":"user",
+    "username":"user",
     "password":"password",
     "database": "monocle",
 
